fix(time_bar): dark mode

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -274,3 +274,10 @@ body.dark-mode .score-text {
   text-shadow: 0 0 5px #000; /* Add subtle shadow to enhance contrast */
 }
 
+body.dark-mode #time-bar-fill {
+  height: 100%;
+  width: 100%;
+  background-color: #4CAF50;
+  transition: width 0.1s linear;
+}
+
